# pbl-tts

./: .gitignore  README.md  dataset.py  inference.py  main.py  pyproject.toml
config/: fastpitch_align.yaml  inference.yaml  vits.yaml
finetune_utils/: __init__.py  fastpitch_finetune.py  hifigan_finetune.py  metric.py  vits_finetune.py
outputs/2025-11-19/15-12-44/.hydra/: hydra.yaml
outputs/2025-11-19/16-42-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-19/16-49-17/.hydra/: hydra.yaml
outputs/2025-11-19/16-55-57/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-19/16-58-49/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-19/17-06-58/.hydra/: hydra.yaml
outputs/2025-11-19/17-07-44/.hydra/: config.yaml  hydra.yaml
results/fastpitch_hifigan_tts_indo_ft/: _scores.txt
results/fastpitch_hifigan_tts_indo_pt/: _scores.txt
results/fastpitch_hifigan_tts_sunda_ft/: _scores.txt
results/fastpitch_hifigan_tts_sunda_pt/: _scores.txt
results/vits_tts_indo_ft/: _scores.txt
results/vits_tts_indo_pt/: _scores.txt
results/vits_tts_sunda_ft/: _scores.txt
results/vits_tts_sunda_pt/: _scores.txt
scripts/: finetune_fastpitch.sh  finetune_hifigan.sh  finetune_vits.sh  initialize.py
scripts/finetune/: fastpitch.sh  fastpitch_indo.sh  hifigan.sh  hifigan_indo.sh  vits.sh  vits_indo.sh
scripts/inference/: fastpitch-hifigan_ft_indo.sh  fastpitch-hifigan_ft_sunda.sh  fastpitch-hifigan_pt_indo.sh  fastpitch-hifigan_pt_sunda.sh  vits_ft_indo.sh  vits_ft_sunda.sh  vits_pt_indo.sh  vits_pt_sunda.sh
(+7 files in other folders)
